[build-system]
requires = ["setuptools>=61.0.0"]
build-backend = "setuptools.build_meta"

[project]
name = "bilili"
description = "ðŸ» bilibili video and danmaku downloader | Bç«™è§†é¢‘ã€å¼¹å¹•ä¸‹è½½å™¨"
readme = "README.md"
requires-python = ">=3.8"
authors = [{ name = "Nyakku Shigure", email = "sigure.qaq@gmail.com" }]
keywords = ["python", "bilibili", "video", "download", "spider", "danmaku"]
license = { text = "GPLv3" }
classifiers = [
  "Environment :: Console",
  "Operating System :: OS Independent",
  "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: Implementation :: CPython",
]
dependencies = ["requests", "biliass==1.3.7"]
dynamic = ["version"]

[project.optional-dependencies]
dev = [
  "pytest>=7.4.0",
  "ruff==0.1.8",
  "pytest-rerunfailures>=11.0",
  "build",
] # fmt: skip

[project.urls]
Homepage = "https://github.com/yutto-dev/bilili"
Documentation = "https://bilili.nyakku.moe/"

[project.scripts]
bilili = "bilili.__main__:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.dynamic]
version = { attr = "bilili.__version__.VERSION" }

[tool.ruff]
line-length = 120
target-version = "py38"

[tool.ruff.lint]
select = [
  # Pyflakes
  "F",
  # Pycodestyle
  "E",
  "W",
  # Isort
  "I",
  # Pyupgrade
  "UP",
  # Flake8-pyi
  "PYI",
  # Yesqa
  "RUF100",
]
ignore = [
  "E501", # line too long, duplicate with black
  "E731", # lambda sometimes is more readable
  "F401", # imported but unused, duplicate with pyright
  "F841", # local variable is assigned to but never used, duplicate with pyright
]

[tool.ruff.lint.isort]
known-first-party = ["bilili"]

[tool.pytest.ini_options]
markers = ["api", "e2e", "ci_skip", "ci_only"]
