[build-system]
requires = ["setuptools>=61.0.0"]
build-backend = "setuptools.build_meta"

[project]
name = "bilili"
description = "ðŸ» bilibili video and danmaku downloader | Bç«™è§†é¢‘ã€å¼¹å¹•ä¸‹è½½å™¨"
readme = "README.md"
requires-python = ">=3.9"
authors = [{ name = "Nyakku Shigure", email = "sigure.qaq@gmail.com" }]
keywords = ["python", "bilibili", "video", "download", "spider", "danmaku"]
license = { text = "GPLv3" }
classifiers = [
  "Environment :: Console",
  "Operating System :: OS Independent",
  "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: Implementation :: CPython",
]
dependencies = ["requests>=2.27.0", "biliass==1.3.13"]
dynamic = ["version"]

[project.urls]
Homepage = "https://github.com/yutto-dev/bilili"
Documentation = "https://bilili.nyakku.moe/"

[project.scripts]
bilili = "bilili.__main__:main"

[tool.uv]
dev-dependencies = [
  "pytest>=8.3.2",
  "ruff==0.6.7",
  "pytest-rerunfailures>=14.0",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.dynamic]
version = { attr = "bilili.__version__.VERSION" }

[tool.ruff]
line-length = 120
target-version = "py39"

[tool.ruff.lint]
select = [
  # Pyflakes
  "F",
  # Pycodestyle
  "E",
  "W",
  # Isort
  "I",
  # Pyupgrade
  "UP",
  # Flake8-pyi
  "PYI",
  # Yesqa
  "RUF100",
]
ignore = [
  "E501", # line too long, duplicate with ruff fmt
  "E731", # lambda sometimes is more readable
  "F401", # imported but unused, duplicate with pyright
  "F841", # local variable is assigned to but never used, duplicate with pyright
]

[tool.ruff.lint.isort]
known-first-party = ["bilili"]

[tool.pytest.ini_options]
markers = ["api", "e2e", "ci_skip", "ci_only"]
